--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="service-item">
                 <img src="primarylogo.png" alt="Service 1 Image" class="service-image">
                 <h3>Service 1</h3>
-                <p>First project design using figma</p>
+                <p>First project design using photoshop</p>
             </div>
             <div class="service-item">
                 <img src="GRAD3.png" alt="Service 2 Image" class="service-image">
